Combined two versions and added batch job files.

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,15 @@
 # Root-files:
 *.root
 
+# Exec-files
+exec_JEWELtoROOT*
+Todo_*
+
 #Additional files:
+.*.swp
+.*.sw0
+.*.swn
+outputs/*
 nanoDict.cc
 nanoDict_rdict.pcm
 JEWELChargedDijet
